refactor: change container div to main

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <main class="container">
         <div class="cards">
             <div class="card">
                 <img src="img/games/gtav.jpg" alt="">
@@ -47,7 +47,7 @@
                 </div>
             </div>  
         </div>
-    </div>
+    </main>
 
     <div class="footer">
         <div class="copyright">
