style: HTML Beautifer

--- a/games.html
+++ b/games.html
@@ -9,9 +9,11 @@
     <script src="js/jquery-3.4.1.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="navbar">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/McDonald%27s_Golden_Arches.svg/2339px-McDonald%27s_Golden_Arches.svg.png" alt="" class="nav-logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/McDonald%27s_Golden_Arches.svg/2339px-McDonald%27s_Golden_Arches.svg.png"
+            alt="" class="nav-logo">
         <div class="nav-item">
             <a href="/home.html">Home</a>
             <a href="/games.html" class="active">Games</a>
