refactor: Change container div to main

--- a/games.html
+++ b/games.html
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <main class="container">
         <div class="map-arena">
             <div class="map">
                 <img src="img/map.jpg" alt="">
@@ -41,7 +41,7 @@
                 <img src="/img/games/Apex.jpg" alt="" id="apex" style="display: none;">
             </div>
         </div>
-    </div>
+    </main>
 
     <div class="footer">
         <div class="copyright">
