--- a/devices.html
+++ b/devices.html
@@ -13,8 +13,8 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/McDonald%27s_Golden_Arches.svg/2339px-McDonald%27s_Golden_Arches.svg.png" alt="" class="nav-logo">
         <div class="nav-item">
             <a href="/home.html">Home</a>
-            <a href="/games.html" class="active">Games</a>
-            <a href="/devices.html">Devices</a>
+            <a href="/games.html">Games</a>
+            <a href="/devices.html" class="active">Devices</a>
             <a href="/login.html">Login</a>
         </div>
     </div>
