refactor: change div with footer class to footer

--- a/games.html
+++ b/games.html
@@ -43,11 +43,11 @@
         </div>
     </main>
 
-    <div class="footer">
+    <footer>
         <div class="copyright">
             Copyright 2021 Taiwan Mobile game All Rights Reserved
         </div>
-    </div>
+    </footer>
 </body>
 <script>
     $(".map>a").click(function () {
