--- a/devices.html
+++ b/devices.html
@@ -23,10 +23,10 @@
         
     </div>
 
-    <div class="footer">
+    <footer>
         <div class="copyright">
             Copyright 2021 Taiwan Mobile game All Rights Reserved
         </div>
-    </div>
+    </footer>
 </body>
 </html>
