--- a/home.html
+++ b/home.html
@@ -49,10 +49,10 @@
         </div>
     </main>
 
-    <div class="footer">
+    <footer>
         <div class="copyright">
             Copyright 2021 Taiwan Mobile game All Rights Reserved
         </div>
-    </div>
+    </footer>
 </body>
 </html>
