--- a/devices.html
+++ b/devices.html
@@ -19,8 +19,8 @@
         </div>
     </div>
 
-    <div class="container">
-        
+    <main class="container">
+        <div class="devices">
     </div>
 
     <footer>
