feat: add photos to devices page

--- a/devices.html
+++ b/devices.html
@@ -21,7 +21,26 @@
 
     <main class="container">
         <div class="devices">
-    </div>
+            <div class="device-pic">
+                <img src="img/games/amazon.jpg" alt="">
+            </div>
+            <div class="device-pic">
+                <img src="img/games/gtav.jpg" alt="">
+            </div>
+            <div class="device-pic">
+                <img src="img/games/genshin-hero-mobile.jpg" alt="">
+            </div>
+            <div class="device-pic">
+                <img src="img/games/PUBG.jpg" alt="">
+            </div>
+            <div class="device-pic">
+                <img src="img/games/LEG.jpg" alt="">
+            </div>
+            <div class="device-pic">
+                <img src="img/games/Apex.jpg " alt="">
+            </div>
+        </div>
+    </main>
 
     <footer>
         <div class="copyright">
