style: change header and navbar

--- a/home.html
+++ b/home.html
@@ -6,17 +6,21 @@
     <title>台灣手遊網站(Taiwan Mobile game)</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <div class="navbar">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/McDonald%27s_Golden_Arches.svg/2339px-McDonald%27s_Golden_Arches.svg.png" alt="" class="nav-logo">
+
+<header>
+    <nav class="container">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/McDonald%27s_Golden_Arches.svg/2339px-McDonald%27s_Golden_Arches.svg.png"
+            alt="" class="nav-logo">
         <div class="nav-item">
             <a href="/home.html" class="active">Home</a>
             <a href="/games.html">Games</a>
             <a href="/devices.html">Devices</a>
             <a href="/login.html">Login</a>
         </div>
-    </div>
+    </nav>
+</header>
 
+<body>
     <main class="container">
         <div class="cards">
             <div class="card">
