--- a/devices.html
+++ b/devices.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +9,21 @@
     <script src="js/jquery-3.4.1.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <div class="navbar">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/McDonald%27s_Golden_Arches.svg/2339px-McDonald%27s_Golden_Arches.svg.png" alt="" class="nav-logo">
+
+<header>
+    <nav class="container">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/McDonald%27s_Golden_Arches.svg/2339px-McDonald%27s_Golden_Arches.svg.png"
+            alt="" class="nav-logo">
         <div class="nav-item">
             <a href="/home.html">Home</a>
             <a href="/games.html">Games</a>
             <a href="/devices.html" class="active">Devices</a>
             <a href="/login.html">Login</a>
         </div>
-    </div>
+    </nav>
+</header>
 
+<body>
     <main class="container">
         <div class="devices">
             <div class="device-pic">
@@ -47,5 +52,7 @@
             Copyright 2021 Taiwan Mobile game All Rights Reserved
         </div>
     </footer>
+    </div>
 </body>
+
 </html>
