--- a/games.html
+++ b/games.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-    <div class="navbar">
+<header>
+    <nav class="container">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/McDonald%27s_Golden_Arches.svg/2339px-McDonald%27s_Golden_Arches.svg.png"
             alt="" class="nav-logo">
         <div class="nav-item">
@@ -20,8 +20,10 @@
             <a href="/devices.html">Devices</a>
             <a href="/login.html">Login</a>
         </div>
-    </div>
+    </nav>
+</header>
 
+<body>
     <main class="container">
         <div class="map-arena">
             <div class="map">
