--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>台灣手遊網站(Taiwan Mobile game)</title>
+    <title>Home | T.M.G</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
