--- a/games.html
+++ b/games.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>台灣手遊網站(Taiwan Mobile game)</title>
+    <title>Games | T.M.G</title>
     <script src="js/jquery-3.4.1.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
